@@ -18,20 +18,17 @@ __BEGIN_DECLS
 
 zListClass( zVec3DList, zVec3DListCell, zVec3D* );
 
-/*! \brief find an identical 3D vector in a list.
+/*! \brief allocate a 3D vector list cell and copy a vector.
  *
- * zVec3DListFind() finds a 3D vector in a list \a list that is
- * identical with the given vector \a v.
+ * zVec3DListNew() allocates a new 3D vector list cell and copy a 3D vector \a v to it.
  * \return
- * zVec3DListFind() returns a pointer to the 3D vector in \a list,
- * if found. Otherwise, it returns the null pointer.
+ * zVec3DListNew() returns a pointer to the newly allocated cell.
  */
-__ZEO_EXPORT zVec3DListCell *zVec3DListFind(zVec3DList *list, zVec3D *v);
+__ZEO_EXPORT zVec3DListCell *zVec3DListNew(zVec3D *v);
 
 /*! \brief add a 3D vector to a vector list.
  *
- * zVec3DListAdd() adds a copy of a 3D vector \a v at the head of
- * a list of vectors \a list.
+ * zVec3DListAdd() adds a copy of a 3D vector \a v at the head of a list of vectors \a list.
  * \return
  * zVec3DListAdd() returns a pointer to the newly added cell.
  */
@@ -39,21 +36,27 @@ __ZEO_EXPORT zVec3DListCell *zVec3DListAdd(zVec3DList *list, zVec3D *v);
 
 /*! \brief append an array of 3D vectors to a list.
  *
- * zVec3DListAppendArray() appends an array of 3D vectors \a array to
- * a list of 3D vectors \a list. Vectors of \a array are copied to cells of
- * \a list.
+ * zVec3DListAppendArray() appends an array of 3D vectors \a array to a list of 3D vectors \a list.
+ * Vectors of \a array are copied to cells of \a list.
  * \return
- * zVec3DListAppendArray() returns \a list if succeeding. Otherwise,
- * the null pointer is returned.
+ * zVec3DListAppendArray() returns \a list if succeeding. Otherwise, the null pointer is returned.
  * \sa zVec3DArray2List
  */
 __ZEO_EXPORT zVec3DList *zVec3DListAppendArray(zVec3DList *list, zVec3DArray *array);
 
+/*! \brief clone an array of 3D vectors.
+ *
+ * zVec3DListClone() clones an array of 3D vectors \a src and make another list \a dest.
+ * \return
+ * zVec3DListClone() returns a pointer \a dest if it succeeds.
+ * Otherwise, the null pointer is returned.
+ */
+__ZEO_EXPORT zVec3DList *zVec3DListClone(zVec3DList *src, zVec3DList *dest);
+
 /*! \brief converts an array of 3D vectors to a list.
  *
- * zVec3DArray2List() converts an array of 3D vectors \a array to a list
- * of 3D vectors \a list. Vectors of \a array are copied to cells of
- * \a list.
+ * zVec3DArray2List() converts an array of 3D vectors \a array to a list of 3D vectors \a list.
+ * Vectors of \a array are copied to cells of \a list.
  * \return
  * zVec3DArray2List() returns a pointer \a list.
  * \sa zVec3DArrayAppendList
@@ -68,15 +71,22 @@ __ZEO_EXPORT zVec3DList *zVec3DArray2List(zVec3DArray *array, zVec3DList *list);
  */
 __ZEO_EXPORT void zVec3DListDestroy(zVec3DList *list);
 
+/*! \brief find an identical 3D vector in a list.
+ *
+ * zVec3DListFind() finds a 3D vector in a list \a list that is identical with the given vector \a v.
+ * \return
+ * zVec3DListFind() returns a pointer to the 3D vector in \a list, if found. Otherwise, it returns
+ * the null pointer.
+ */
+__ZEO_EXPORT zVec3DListCell *zVec3DListFind(zVec3DList *list, zVec3D *v);
+
 /*! \brief a quick sort routine for vector list class.
  *
  * zVec3DListQuickSort() is a quick sort routine for zVec3DList class.
  *
- * The cells of \a list will be sorted in ascending order according to
- * the comparison function \a cmp.
- * (The factor a in \a list is put after another factor b when
- * \a cmp(a,b,p) > 0, where p is for programmer's utility, given
- * by \a priv.)
+ * The cells of \a list will be sorted in ascending order according to the comparison function \a cmp.
+ * (The factor a in \a list is put after another factor b when \a cmp(a,b,p) > 0, where p is for
+ * programmer's utility, given by \a priv.)
  * \return
  * zVec3DListQuickSort() returns a pointer \a list.
  * \sa
@@ -86,8 +96,8 @@ __ZEO_EXPORT zVec3DList *zVec3DListQuickSort(zVec3DList *list, int (*cmp)(void*,
 
 /*! \brief print a list of 3D vectors.
  *
- * zVec3DListFPrint() prints a list of 3D vectors \a list out
- * to the current position of a file \a fp in the following style.
+ * zVec3DListFPrint() prints a list of 3D vectors \a list out to the current position of a file \a fp
+ * in the following format.
  * n
  *  ( x1, y1, z1 )
  *   ...
@@ -101,9 +111,8 @@ __ZEO_EXPORT void zVec3DListFPrint(FILE *fp, zVec3DList *list);
 
 /*! \brief print a list of 3D vectors in a plain form.
  *
- * zVec3DListDataFPrint() prints a list of 3D vectors \a list
- * out to the current position of the file \a fp in the following
- * style.
+ * zVec3DListDataFPrint() prints a list of 3D vectors \a list out to the current position of the file \a fp
+ * in the following format.
  *  x1, y1, z1
  *   ...
  *  xn, yn, zn
@@ -124,8 +133,7 @@ typedef zVec3DListCell zVec3DAddr;
 
 /*! \brief add a pointer to a 3D vector into a list of vectors.
  *
- * zVec3DAddrListAdd() adds a pointer to a 3D vector \a v at the
- * head of a list of vectors \a list.
+ * zVec3DAddrListAdd() adds a pointer to a 3D vector \a v at the head of a list of vectors \a list.
  * \return
  * zVec3DAddrListAdd() returns a pointer to the newly added cell.
  */
@@ -133,20 +141,18 @@ __ZEO_EXPORT zVec3DAddr *zVec3DAddrListAdd(zVec3DAddrList *list, zVec3D *v);
 
 /*! \brief append an array of 3D vectors to a list of pointers to 3D vectors.
  *
- * zVec3DAddrListAppendArray() appends an array of 3D vectors \a array to
- * a list of pointers to 3D vectors \a list.
+ * zVec3DAddrListAppendArray() appends an array of 3D vectors \a array to a list of pointers to
+ * 3D vectors \a list.
  * \return
- * zVec3DAddrListAppendArray() returns \a list if succeeding. Otherwise,
- * the null pointer is returned.
+ * zVec3DAddrListAppendArray() returns \a list if succeeding. Otherwise, the null pointer is returned.
  * \sa zVec3DArray2List
  */
 __ZEO_EXPORT zVec3DAddrList *zVec3DAddrListAppendArray(zVec3DAddrList *list, zVec3DArray *array);
 
 /*! \brief create a list of pointers to 3D vectors from an array.
  *
- * zVec3DAddrListCreate() creates a list of pointers to 3D vectors
- * \a list, each cell of which points an element of an array of 3D
- * vectors \a array.
+ * zVec3DAddrListCreate() creates a list of pointers to 3D vectors \a list, each cell of which points
+ * an element of an array of 3D vectors \a array.
  * \return
  * zVec3DAddrListCreate() returns a pointer \a list.
  */
@@ -154,7 +160,7 @@ __ZEO_EXPORT zVec3DAddrList *zVec3DAddrListCreate(zVec3DAddrList *list, zVec3DAr
 
 /*! \brief clone a list of vectors.
  *
- * zVec3DAddrListClone() clones a list of vectors \a src to \a dest.
+ * zVec3DAddrListClone() clones a list of pointers to 3D vectors \a src and make another list \a dest.
  * \return
  * zVec3DAddrListClone() returns a pointer \a dest if it succeeds.
  * Otherwise, the null pointer is returned.
@@ -173,10 +179,9 @@ __ZEO_EXPORT zVec3DAddrList *zVec3DAddrListClone(zVec3DAddrList *src, zVec3DAddr
  *
  * zVec3DAddrListQuickSort() is a quick sort routine for zVec3DAddrList class.
  *
- * The cells of \a list will be sorted in ascending order according to
- * the comparison function \a cmp.
- * (The factor a in \a list is put after another factor b when
- * \a cmp(a,b,p) > 0, where p is for programmer's utility, given by \a priv.)
+ * The cells of \a list will be sorted in ascending order according to the comparison function \a cmp.
+ * (The factor a in \a list is put after another factor b when \a cmp(a,b,p) > 0, where p is for
+ * programmer's utility, given by \a priv.)
  * \return
  * zVec3DAddrListQuickSort() returns a pointer \a list.
  * \sa
@@ -186,9 +191,8 @@ __ZEO_EXPORT zVec3DAddrList *zVec3DAddrListQuickSort(zVec3DAddrList *list, int (
 
 /*! \brief print a list of pointers to 3D vectors.
  *
- * zVec3DAddrListFPrint() prints a list of pointers to 3D vectors
- * \a list to the current position of a file \a fp in the following
- * style.
+ * zVec3DAddrListFPrint() prints a list of pointers to 3D vectors \a list to the current position
+ * of a file \a fp in the following format.
  * n
  *  ( x1, y1, z1 )
  *   ...
@@ -202,9 +206,8 @@ __ZEO_EXPORT void zVec3DAddrListFPrint(FILE *fp, zVec3DAddrList *list);
 
 /*! \brief print a list of pointers to 3D vectors in a plain form.
  *
- * zVec3DAddrListDataFPrint() prints a list of pointers to 3D vectors
- * \a list out to the current position of a file \a fp in the following
- * style.
+ * zVec3DAddrListDataFPrint() prints a list of pointers to 3D vectors \a list out to the current
+ * position of a file \a fp in the following format.
  *  x1, y1, z1
  *   ...
  *  xn, yn, zn
