@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.14.12
+VERSION=1.14.13
 DEPENDENCY="zeda=1.8.13;zm=1.8.16"
